# pybind11-ros-tutorial

./: README.md
on-the-cheap/: example.cpp
pybind11_demo/: package.xml  setup.cfg  setup.py
pybind11_demo/pybind11_demo/: count_1b_py.py  count_1b_pybind.py  factory_inspect.py  factory_listener.py
pybind11_example/: CMakeLists.txt  package.xml
pybind11_example/include/pybind11_example/: example_class.hpp  example_factory.hpp  example_function.hpp  example_product.hpp
pybind11_example/src/: example_class.cpp  example_factory.cpp  example_function.cpp
pybind11_example_py/: CMakeLists.txt  package.xml
pybind11_example_py/include/pybind11_example_py/: example_class.hpp  example_factory.hpp  example_function.hpp  example_product.hpp
pybind11_example_py/pybind11_example/: __init__.py  __init__.pyi  core.pyi
pybind11_example_py/script/: generate_stubs.sh
pybind11_example_py/src/: core.cpp  example_class.cpp  example_factory.cpp  example_function.cpp  example_product.cpp
