<?xml version="1.0"?>
<package format="3">
  <name>pybind11_demo</name>
  <version>0.1.0</version>
  <description>
    A simple demo using pybind11.
  </description>

  <maintainer email="chenbn@artc.a-star.edu.sg">Chen Bainian</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>pybind11_example_py</exec_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
